Correction login page

--- a/frontend/login_page.html
+++ b/frontend/login_page.html
@@ -10,13 +10,12 @@
             <div class="wrapper">
                 <h1>
                     <a href="login_page.html">
-                        <img class="logo" src="img/linkedoff_logo.png" alt="LinkedOff Logo" />
+                        <img class="logo" src="img/linkedoff_logo_white.png" alt="LinkedOff Logo" />
                     </a>
                 </h1>
                 <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Se connecter</button>
             </div>
         </div>
-        <h2>Bienvenue</h2>
 
         <div id="id01" class="modal">
 
