Rajout champ confirmer mdp

--- a/frontend/login-page.html
+++ b/frontend/login-page.html
@@ -60,6 +60,8 @@
                     <input type="text" name="email" class="reg-email" autocapitalize="off" tabindex="1" id="reg-email" aria-required="true" autofocus="autofocus">
                     <label for="reg-password">Mot de passe</label>
                     <input type="password" name="session_password" class="reg-password" id="reg-password" aria-required="true" tabindex="1" autocomplete="new-password">
+                    <label for="reg-password">Confirmez le mot de passe</label>
+                    <input type="password" name="session_password" class="reg-password" id="reg-password-confirm" aria-required="true" tabindex="1" autocomplete="new-password">
                     <input tabindex="4" id="registration-submit" class="registration submit-button" type="submit" value="S'inscrire">
                 </section>
             </form>
