Rajout de notre icon dans le header

--- a/frontend/login-page.html
+++ b/frontend/login-page.html
@@ -2,7 +2,9 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="UTF-8">
         <title>LinkedOff: Log In or Sign Up</title>
+        <link rel="icon" href="img/linkedoff_favicon.png">
         <link href="login.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
