--- a/frontend/login-page.html
+++ b/frontend/login-page.html
@@ -12,7 +12,7 @@
             <div class="header">
                 <div class="wrapper">
                     <h1>
-                        <a href="login_page.html">
+                        <a href="login-page.html">
                             <img class="logo" src="img/linkedoff_logo_white.png" alt="LinkedOff Logo" />
                         </a>
                     </h1>
