Améliorations du menu

--- a/frontend/home.html
+++ b/frontend/home.html
@@ -16,9 +16,9 @@
                             <img class="logo" src="img/linkedoff_logo_white.png" alt="LinkedOff Logo" />
                         </a>
                     </h1>
-                    <ul class="nav-main nav-container display-flex full-height" role="navigation" aria-label="Primary">
+                    <ul class="nav-main display-flex full-height" role="navigation" aria-label="Primary">
                         <li id="home-nav-item" class="nav-item">
-                            <a href="home.html" class="nav-item__link">
+                            <a href="home.html" data-hover="Accueil" class="nav-item__link  current">
                                 <span id="feed-tab-icon" class="nav-item__icon" aria-role="presentation">
                                     <li-icon aria-hidden="true" type="nav-small-home-icon" color="true">
                                         <img class="icon" src="img/menu/home-outline.png" alt="Home" />
@@ -28,7 +28,7 @@
                             </a>
                         </li>
                         <li id="mynetwork-nav-item" class="nav-item">
-                            <a href="mynetwork.html" class="nav-item__link">
+                            <a href="mynetwork.html" data-hover="Mon Réseau" class="nav-item__link">
                                 <span id="mynetwork-tab-icon" class="nav-item__icon" aria-role="presentation">
                                     <li-icon aria-hidden="true" type="nav-small-people-icon" color="true">
                                         <img class="icon" src="img/menu/my-network-outline.png" alt="Network" />
@@ -38,7 +38,7 @@
                             </a>
                         </li>
                         <li id="notifications-nav-item" class="nav-item">
-                            <a href="notifications.html" class="nav-item__link">
+                            <a href="notifications.html" data-hover="Notifications" class="nav-item__link">
                                 <span id="notifications-tab-icon" class="nav-item__icon" aria-role="presentation">
                                     <li-icon aria-hidden="true" type="nav-small-notifications-icon" color="true">
                                         <img class="icon" src="img/menu/notifications-bell-outline.png" alt="Notifications" />
@@ -48,7 +48,7 @@
                             </a>
                         </li>
                         <li id="messaging-nav-item" class="nav-item nav-item--messaging">
-                            <a href="messages.html" class="nav-item__link">
+                            <a href="messages.html" data-hover="Messagerie" class="nav-item__link">
                                 <span id="messaging-tab-icon" class="nav-item__icon" aria-role="presentation">
                                     <li-icon aria-hidden="true" type="nav-small-messaging-icon" color="true">
                                         <img class="icon" src="img/menu/speech-bubble-outline.png" alt="Messages" />
@@ -58,7 +58,7 @@
                             </a>
                         </li>
                         <li id="jobs-nav-item" class="nav-item">
-                            <a href="jobs.html" class="nav-item__link">
+                            <a href="jobs.html" data-hover="Emplois" class="nav-item__link">
                                 <span id="jobs-tab-icon" class="nav-item__icon" aria-role="presentation">
                                     <li-icon aria-hidden="true" type="nav-small-jobs-icon" color="true">
                                         <img class="icon" src="img/menu/work-briefcase-outline.png" alt="Jobs" />
@@ -68,7 +68,7 @@
                             </a>
                         </li>
                         <li id="logoff-nav-item" class="nav-item">
-                            <a href="logoff" class="nav-item__link">
+                            <a href="logoff" data-hover="Déconnexion" class="nav-item__link">
                                 <span id="logoff-tab-icon" class="nav-item__icon" aria-role="presentation">
                                     <li-icon aria-hidden="true" type="nav-small-logoff-icon" color="true">
                                         <img class="icon" src="img/menu/power-button-off.png" alt="On/Off" />
