--- a/frontend/references.html
+++ b/frontend/references.html
@@ -28,6 +28,7 @@
                             <a href="https://www.flaticon.com/authors/google" class="footer__link" title="Google">Google</a>,&nbsp;
                             <a href="https://www.flaticon.com/authors/bogdan-rosu" class="footer__link" title="Bogdan Rosu">Bogdan Rosu</a>,&nbsp;
                             <a href="https://www.flaticon.com/authors/zurb" class="footer__link" title="Zurb">Zurb</a>,&nbsp;
+                            <a href="https://www.flaticon.com/authors/chanut" class="footer__link" title="Chanut">Chanut</a>,&nbsp;
                             <a href="https://www.flaticon.com/authors/egor-rumyantsev" class="footer__link" title="Egor Rumyantsev">Egor Rumyantsev</a>&nbsp;and
                             <a href="https://www.flaticon.com/authors/dave-gandy" class="footer__link" title="Dave Gandy">Dave Gandy</a>&nbsp;from 
                             <a href="https://www.flaticon.com/" class="footer__link" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" class="footer__link" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>.
