Corrections action home

--- a/frontend/references.html
+++ b/frontend/references.html
@@ -35,6 +35,9 @@
                             <a href="https://www.flaticon.com/authors/dave-gandy" class="footer__link" title="Dave Gandy">Dave Gandy</a>&nbsp;from 
                             <a href="https://www.flaticon.com/" class="footer__link" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" class="footer__link" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>.
                         </li>
+                        <li>
+                            Tutorials from <a href="https://www.w3schools.com/" class="footer__link" title="w3schools">www.w3schools.com</a>
+                        </li>
                     </ul>
                 </div>
             </div>
