Maj de la bibliographie

--- a/frontend/references.html
+++ b/frontend/references.html
@@ -33,10 +33,20 @@
                             <a href="https://www.flaticon.com/authors/appzgear" class="footer__link" title="Appzgear">Appzgear</a>,&nbsp;
                             <a href="https://www.flaticon.com/authors/egor-rumyantsev" class="footer__link" title="Egor Rumyantsev">Egor Rumyantsev</a>&nbsp;and
                             <a href="https://www.flaticon.com/authors/dave-gandy" class="footer__link" title="Dave Gandy">Dave Gandy</a>&nbsp;from 
-                            <a href="https://www.flaticon.com/" class="footer__link" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" class="footer__link" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>.
+                            <a href="https://www.flaticon.com/" class="footer__link" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" class="footer__link" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>;
                         </li>
                         <li>
-                            Tutorials from <a href="https://www.w3schools.com/" class="footer__link" title="w3schools">www.w3schools.com</a>
+                            Data model for a Social Network from 
+                            <a href="http://www.databaseanswers.org/data_models/social_networking/index.htm" class="footer__link" title="DataModel">www.databaseanswers.org</a>;
+                        </li>
+                        <li>
+                            Tutorials from <a href="https://keithscode.com/" class="footer__link" title="KeithsCode">www.keithscode.com</a>;
+                        </li>
+                        <li>
+                            Tutorials from <a href="https://stackoverflow.com/" class="footer__link" title="StackOverflow">www.stackoverflow.com</a>;
+                        </li>
+                        <li>
+                            Tutorials from <a href="https://www.w3schools.com/" class="footer__link" title="w3schools">www.w3schools.com</a>.
                         </li>
                     </ul>
                 </div>
