Petit changement de dernière minute

--- a/frontend/references.html
+++ b/frontend/references.html
@@ -27,7 +27,7 @@
                             Icons made by 
                             <a href="https://www.flaticon.com/authors/google" class="footer__link" title="Google">Google</a>,&nbsp;
                             <a href="https://www.flaticon.com/authors/bogdan-rosu" class="footer__link" title="Bogdan Rosu">Bogdan Rosu</a>,&nbsp;
-                            <a href="http://www.freepik.com" title="Freepik">Freepik</a>,&nbsp;
+                            <a href="http://www.freepik.com" class="footer__link" title="Freepik">Freepik</a>,&nbsp;
                             <a href="https://www.flaticon.com/authors/zurb" class="footer__link" title="Zurb">Zurb</a>,&nbsp;
                             <a href="https://www.flaticon.com/authors/chanut" class="footer__link" title="Chanut">Chanut</a>,&nbsp;
                             <a href="https://www.flaticon.com/authors/appzgear" class="footer__link" title="Appzgear">Appzgear</a>,&nbsp;
